log
Wed, Apr 16, 2025 10:14:20 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Thu, Apr 17, 2025  4:46:49 PM: 
 hashmap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
441b173
Thu, Apr 17, 2025  4:47:26 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
d52e860
Thu, Apr 17, 2025  4:47:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b5ebc32
